--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
+                  <%- link_to "Home"%>
+                </li>
+                <li>
                   <%= link_to "Log out", destroy_user_session_path, method: :delete %>
                 </li>
               <% else %>
