--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
           <a class="navbar-brand" href="/">
             <span>Bookers</span>
           </a>
-          <bouttn class="navbar-toggler collapsed" type="button" 
-                  data-toggle="collapse" data-target="#navbarNavDropdown" 
+          <bouttn class="navbar-toggler collapsed" type="button"
+                  data-toggle="collapse" data-target="#navbarNavDropdown"
                   aria-controls="navbarNavDropdown"
                   aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,23 +26,23 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
-                  <%= link_to "Home",%>
+                  <%= link_to "Home",user_path(current_user)%>
                 </li>
                 <li>
-                  <%= link_to "Users",%>
+                  <%= link_to "Users",users_path%>
                 </li>
                 <li>
-                  <%= link_to "Books",%>
+                  <%= link_to "Books",books_path%>
                 </li>
                 <li>
                   <%= link_to "Log out", destroy_user_session_path, method: :delete %>
                 </li>
               <% else %>
                 <li>
-                  <%= link_to "Home",%>
+                  <%= link_to "Home",root_path%>
                 </li>
                 <li>
-                  <%= link_to "About",%>
+                  <%= link_to "About",about_path%>
                 </li>
                 <li>
                   <%= link_to "Sign up", new_user_registration_path %>
@@ -55,9 +55,9 @@
             </div>
           </div>
         </nav>
-    </header> 
-      
-    
+    </header>
+
+
     <%= yield %>
   </body>
 </html>
