--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,15 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
-                  <%= link_to "Home",user_path(current_user)%>
+                  <%= link_to user_path(current_user),class: 'nav-link text-light' do%>
+                  <i class="fas fa-home"></i>Home
+                  <% end %>
                 </li>
+
                 <li>
-                  <%= link_to "Users",users_path%>
+                  <%= link_to users_path,class: 'nav-link text-light' do%>
+                  <i class="fas fa-users"></i>Users
+                  <% end %>
                 </li>
                 <li>
                   <%= link_to "Books",books_path%>
