--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,33 +27,45 @@
               <% if user_signed_in? %>
                 <li>
                   <%= link_to user_path(current_user),class: 'nav-link text-light' do%>
-                  <i class="fas fa-home"></i>Home
+                  <i class="fas fa-home"></i> Home
                   <% end %>
                 </li>
 
                 <li>
                   <%= link_to users_path,class: 'nav-link text-light' do%>
-                  <i class="fas fa-users"></i>Users
+                  <i class="fas fa-users"></i> Users
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to "Books",books_path%>
+                  <%= link_to books_path,class: 'nav-link text-light' do%>
+                  <i class="fas fa-book-open"></i> Books
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+                  <%= link_to  destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
+                  <i class="fas fa-sign-out-alt"></i> Log aut
+                  <% end %>
                 </li>
               <% else %>
                 <li>
-                  <%= link_to "Home",root_path%>
+                  <%= link_to root_path,class: 'nav-link text-light' do%>
+                  <i class="fas fa-home"></i> Home
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "About",about_path%>
+                  <%= link_to about_path,class: 'nav-link text-light' do%>
+                  <i class="fas fa-link"></i> About
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Sign up", new_user_registration_path %>
+                  <%= link_to new_user_registration_path,class: 'nav-link text-light' do %>
+                  <i class="fas fa-user-plus"></i> Sign up
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "Log in", new_user_session_path %>
+                  <%= link_to new_user_session_path,class: 'nav-link text-light' do %>
+                  <i class="fas fa-sign-in-alt"></i> Log in
+                  <% end %>
                 </li>
               <% end %>
               </ul>
