--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,15 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<p id="notice"></p>
+<div class="container">
+    <div class="row">
+     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-x1-6">
+         <h1>
+            welcome to<i class="fas fa-book"></i><strong>Bookers</strong>  !!
+         </h1>
+         <p>
+             In<i class="fas fa-book"></i><strong>Bookers</strong>,
+         </p>
+         <p>you can share and exchange your opinions , inpressions , and emotions</p>
+         <p>about verious books!</p>
+     </div>
+    </div>
+</div>
