--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,6 +10,14 @@
          </p>
          <p>you can share and exchange your opinions , inpressions , and emotions</p>
          <p>about verious books!</p>
+         <div class="bin-wrapper col-10 mx-auto">
+             <div class="row">
+                 <%= link_to "Log in", new_user_session_path,class: 'btn btn-info btn-sm btn-block mb-3 sign-in' %>
+             </div>
+             <div class="row">
+                 <%= link_to "Sign up", new_user_registration_path,class: 'btn btn-success btn-sm btn-block sign_up' %>
+             </div>
+         </div>
      </div>
     </div>
 </div>
