--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,8 @@
-<h1>aboutページ</h1>
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+    <h1 class="px-3 mx-auto">
+      Welcome to<i class="fas fa-book"></i><strong>Bookers</strong>  !
+    </h1>
+  </div>
+</div>
