--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<%= form_with model: Book.new do |f| %>
+<h2 class="mt-3">New book</h2>
+
+<lebel for="book_title">Title</lebel>
+<%= f.text_field :title %>
+
+<label for="book_opinion">Opinion</label>
+<%= f.text_area :body %>
+
+<%= f.submit 'Create Book',class: 'btn btn-success' %>
+
+<% end %>
