--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,13 @@
+<h2 class="mt-3">User info</h2>
+<% if book.image.attached? %>
+  <%= image_tag list.image, size: "100x100" %>
+<% else %>
+ <%= image_tag 'default-image', size: "100x100" %>
+<% end %>
+
+
 <%= form_with model: Book.new do |f| %>
+
 <h2 class="mt-3">New book</h2>
 
 <lebel for="book_title">Title</lebel>
