--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,21 +9,37 @@
  <%= image_tag 'default-image', size: "100x100" %>
 <% end %>
 
+<table class="table">
+    <tbody>
+        <tr></tr>
+        <tr>
+            <th>name</th>
+            <th><%= @user.name %></th>
+        </tr>
+        <tr>
+            <th>introduction</th>
+            <th><%= @user.introduction %></th>
+        </tr>
+    </tbody>
+</table>
 
 <div class="row">
 <%= form_with model: User.new do |f| %>
 
-<%= f.submit class: 'btn btn-outline-secondary btn-block'%>
+<%= link_to edit_user_path(current_user) ,class: 'btn btn-outline-secondary btn-block' do%>
+<i class="fas fa-user-cog"></i>
+<% end %>
+
 
 <h2 class="mt-3">New book</h2>
+<div class="form-group">
+    <lebel for="book_title">Title</lebel>
+    <%= f.text_field :title ,class: 'form-control'%>
+</div>
+    <label for="book_opinion">Opinion</label>
+    <%= f.text_area :body,class: 'form-control' %>
 
-<lebel for="book_title">Title</lebel>
-<%= f.text_field :title %>
-
-<label for="book_opinion">Opinion</label>
-<%= f.text_area :body %>
-
-<%= f.submit 'Create Book',class: 'btn btn-success' %>
+    <%= f.submit 'Create Book',class: 'btn btn-success' %>
 
 <% end %>
 </div>
