--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -35,17 +35,44 @@
 <div class="form-group">
     <lebel for="book_title">Title</lebel>
     <%= f.text_field :title ,class: 'form-control'%>
-</div>
+
     <label for="book_opinion">Opinion</label>
     <%= f.text_area :body,class: 'form-control' %>
 
     <%= f.submit 'Create Book',class: 'btn btn-success' %>
-
-<% end %>
 </div>
+<% end %>
+
+<div class="col-md-8 offset-md-1">
+ <h2>Books</h2>
+    <table class="table table-hover table-inverse">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Title</th>
+                <th>Opinion</th>
+                <th colspan="3"></th>
+            </tr>
+        </thead>
+        <tbody>
+        <% @books.each do |book| %>
+            <tr>
+                <td>
+                    <%= image_tag book.user.profile_image(100,100) %> 
+                </td>
+            </tr>
+        <% end %>
+        </tbody>
+    </table>
+</div>
+
+                </div>
+            </div>
         </div>
     </div>
-</div>
+
+
+
 
 
 
