--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,7 +4,7 @@
         <div class="col-md-3">
             <h2 class="mt-3">User info</h2>
 <% if @user.profile_image.attached? %>
-  <%= image_tag @user,profile_image, size: "100x100" %>
+  <%= image_tag @user.profile_image, size: "100x100" %>
 <% else %>
  <%= image_tag 'default-image', size: "100x100" %>
 <% end %>
@@ -23,12 +23,14 @@
     </tbody>
 </table>
 
-<div class="row">
-<%= form_with model: User.new do |f| %>
-
 <%= link_to edit_user_path(current_user) ,class: 'btn btn-outline-secondary btn-block' do%>
 <i class="fas fa-user-cog"></i>
 <% end %>
+
+<div class="row">
+<%= form_with model: Book.new do |f| %>
+
+
 
 
 <h2 class="mt-3">New book</h2>
@@ -63,8 +65,8 @@
         <% @books.each do |book| %>
             <tr>
                 <td>
-                     <%= image_tag user.get_image %>
-                    <%= image_tag book.user.profile_image(100,100) %>
+                     <%= book.title %>
+
                 </td>
             </tr>
         <% end %>
@@ -72,7 +74,7 @@
     </table>
 </div>
 
-               
+
 
 
 
