--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,78 +2,87 @@
 <div class="container px-5 px-sm-0">
     <div class="row">
         <div class="col-md-3">
-            <h2 class="mt-3">User info</h2>
-<% if @user.profile_image.attached? %>
-  <%= image_tag @user.profile_image, size: "100x100" %>
-<% else %>
- <%= image_tag 'default-image', size: "100x100" %>
-<% end %>
+            <h2>User info</h2>
+            <% if @user.profile_image.attached? %>
+              <%= image_tag @user.profile_image, size: "100x100" %>
+            <% else %>
+             <%= image_tag 'default-image', size: "100x100" %>
+            <% end %>
 
-<table class="table">
-    <tbody>
-        <tr></tr>
-        <tr>
-            <th>name</th>
-            <th><%= @user.name %></th>
-        </tr>
-        <tr>
-            <th>introduction</th>
-            <th><%= @user.introduction %></th>
-        </tr>
-    </tbody>
-</table>
-
-<%= link_to edit_user_path(current_user) ,class: 'btn btn-outline-secondary btn-block' do%>
-<i class="fas fa-user-cog"></i>
-<% end %>
-
-<div class="row">
-<%= form_with model: Book.new do |f| %>
-
-
-
-
-<h2 class="mt-3">New book</h2>
-<div class="form-group">
-    <lebel for="book_title">Title</lebel>
-    <%= f.text_field :title ,class: 'form-control'%>
-
-    <label for="book_opinion">Opinion</label>
-    <%= f.text_area :body,class: 'form-control' %>
-
-    <%= f.submit 'Create Book',class: 'btn btn-success' %>
-</div>
-<% end %>
-
- </div>
+            <table class="table">
+                <tbody>
+                    <tr></tr>
+                    <tr>
+                        <th>name</th>
+                        <th><%= @user.name %></th>
+                    </tr>
+                    <tr>
+                        <th>introduction</th>
+                        <th><%= @user.introduction %></th>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="row">
+                <%= link_to edit_user_path(current_user) ,class: 'btn btn-outline-secondary btn-block' do%>
+                <i class="fas fa-user-cog"></i>
+                <% end %>
             </div>
+
+
+            <%= form_with model: Book.new do |f| %>
+            <h2 class="mt-3">New book</h2>
+            <div class="form-group">
+                <div class="form-group">
+                    <lebel for="book_title">Title</lebel>
+                    <%= f.text_field :title ,class: 'form-control'%>
+                </div>
+                <div class="form-group">
+                    <label for="book_opinion">Opinion</label>
+                    <%= f.text_area :body,class: 'form-control' %>
+                </div>
+                <div class="form-group">
+                <%= f.submit 'Create Book',class: 'btn btn-success' %>
+                </div>
+            </div>
+            <% end %>
+         </div>
+
+        <div class="col-md-8 offset-md-1">
+         <h2>Books</h2>
+            <table class="table table-hover table-inverse">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>Title</th>
+                        <th>Opinion</th>
+                        <th colspan="3"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                <% @books.each do |book| %>
+                    <tr>
+                        <td>
+                            <% if @user.profile_image.attached? %>
+                             <%= image_tag @user.profile_image, size: "80x80" %>
+                            <% else %>
+                             <%= image_tag 'default-image', size: "80x80" %>
+                            <% end %>
+                        </td>
+                        <td>
+                            <%= link_to  book_path(current_user) do %>
+                             <%= book.title %>
+                            <% end %>
+                        </td>
+                        <td>
+                             <%= book.body %>
+                        </td>
+                    </tr>
+                <% end %>
+                </tbody>
+            </table>
         </div>
- </div>
-
-<div class="col-md-8 offset-md-1">
- <h2>Books</h2>
-    <table class="table table-hover table-inverse">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Title</th>
-                <th>Opinion</th>
-                <th colspan="3"></th>
-            </tr>
-        </thead>
-        <tbody>
-        <% @books.each do |book| %>
-            <tr>
-                <td>
-                     <%= book.title %>
-
-                </td>
-            </tr>
-        <% end %>
-        </tbody>
-    </table>
+    </div>
 </div>
-
 
 
 
