--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,51 +1,6 @@
-<p id="notice"></p>
-<div class="container px-5 px-sm-0">
-    <div class="row">
-        <div class="col-md-3">
-            <h2>User info</h2>
-            <% if @user.profile_image.attached? %>
-              <%= image_tag @user.profile_image, size: "100x100" %>
-            <% else %>
-             <%= image_tag 'default-image', size: "100x100" %>
-            <% end %>
-
-            <table class="table">
-                <tbody>
-                    <tr></tr>
-                    <tr>
-                        <th>name</th>
-                        <th><%= @user.name %></th>
-                    </tr>
-                    <tr>
-                        <th>introduction</th>
-                        <th><%= @user.introduction %></th>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="row">
-                <%= link_to edit_user_path(current_user) ,class: 'btn btn-outline-secondary btn-block' do%>
-                <i class="fas fa-user-cog"></i>
-                <% end %>
-            </div>
+<%= render 'list', user: @user %>
 
 
-            <%= form_with model: Book.new do |f| %>
-            <h2 class="mt-3">New book</h2>
-            <div class="form-group">
-                <div class="form-group">
-                    <lebel for="book_title">Title</lebel>
-                    <%= f.text_field :title ,class: 'form-control'%>
-                </div>
-                <div class="form-group">
-                    <label for="book_opinion">Opinion</label>
-                    <%= f.text_area :body,class: 'form-control' %>
-                </div>
-                <div class="form-group">
-                <%= f.submit 'Create Book',class: 'btn btn-success' %>
-                </div>
-            </div>
-            <% end %>
-         </div>
 
         <div class="col-md-8 offset-md-1">
          <h2>Books</h2>
