--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,7 +28,7 @@
         </td>
         <td>
           <% if @book.user == current_user %>
-            <%= link_to "Destroy", books_path, method: :delete %>
+            <%= link_to "Destroy", books_path, method: :delete,class: 'btn btn-sm btn-danger destroy_book_46780' %>
           <% end %>
         </td>
       </tr>
