--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,7 +24,7 @@
                             <% end %>
                         </td>
                         <td>
-                            <%= link_to  book_path(current_user) do %>
+                            <%= link_to  book_path(book) do %>
                              <%= book.title %>
                             <% end %>
                         </td>
