--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,9 +26,12 @@
         <td>
           <%= @book.body %>
         </td>
+       <td>
+         <%= link_to "Edit", edit_book_path(@book), class:"btn btn btn-sm btn-success"%>
+       </td>
         <td>
           <% if @book.user == current_user %>
-            <%= link_to "Destroy", books_path, method: :delete,class: 'btn btn-sm btn-danger destroy_book_46780' %>
+            <%= link_to "Destroy", book_path(@book), method: :delete,class: 'btn btn-sm btn-danger destroy_book_46780' %>
           <% end %>
         </td>
       </tr>
