--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'list', user: @user %>
+<%= render  'books/list', user: @user,book: @book_new %>
 
 
 
@@ -17,15 +17,16 @@
                 <% @books.each do |book| %>
                     <tr>
                         <td>
+                            <%= link_to  book_path(book) do %>
                             <% if @user.profile_image.attached? %>
                              <%= image_tag @user.profile_image, size: "80x80" %>
                             <% else %>
                              <%= image_tag 'default-image', size: "80x80" %>
                             <% end %>
-                        </td>
                         <td>
                             <%= link_to  book_path(book) do %>
                              <%= book.title %>
+                            <% end %>
                             <% end %>
                         </td>
                         <td>
