--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'books/list', user: @user %>
+<%= render 'books/list', user: @user,book: @book_new%>
 
 <div class="col-md-8 offset-md-1">
   <h2>Book detail</h2>
