--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -29,7 +29,7 @@
             </div>
 
 
-            <%= form_with model: Book.new do |f| %>
+            <%= form_with model: book do |f| %>
             <h2 class="mt-3">New book</h2>
             <div class="form-group">
                 <div class="form-group">
