--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,14 @@
-<h1>User indexページ</h1>
+<%= render  'books/list.html.erb', user: @user,book: @book_new %>
+
+
+<div class="col-md-8 offset-md-1">
+  <h2>Users</h2>
+  <table class="table">
+     <thead>
+       <tr>
+         <th>image</th>
+         <th>name</th>
+         <th colspan="3"></th>
+       </tr>
+     </thead>
+  </table>
