--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,4 +11,23 @@
          <th colspan="3"></th>
        </tr>
      </thead>
+     <tbody>
+      <% @books.each do |book| %>
+         <tr>
+            <td>
+
+              <% if @user.profile_image.attached? %>
+               <%= image_tag @user.profile_image, size: "80x80" %>
+              <% else %>
+                <%= image_tag 'default-image', size: "80x80" %>
+              <% end %>
+            <td>
+               <%= @user.name %>
+             </td>
+             <td>
+              <%= link_to "Show",user_path(book) %>
+             </td>
+          </tr>
+      <% end %>
+     </tbody>
   </table>
