--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<%= render  'books/list.html.erb', user: @user,book: @book_new %>
+
+
+<div class="col-md-8 offset-md-1">
+  <h2>Books</h2>
+  <table class="table">
+     <thead>
+       <tr>
+         <th>Title</th>
+         <th>Opinion</th>
+         <th colspan="3"></th>
+       </tr>
+     </thead>
+     <tbody>
+       
+     </tbody>
