--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,5 +12,24 @@
        </tr>
      </thead>
      <tbody>
-       
+        <% @books.each do |book| %>
+             <tr>
+                 <td>
+                    <%= link_to  book_path(book) do %>
+                        <% if @user.profile_image.attached? %>
+                            <%= image_tag @user.profile_image, size: "80x80" %>
+                        <% else %>
+                             <%= image_tag 'default-image', size: "80x80" %>
+                        <% end %>
+                 <td>
+                    <%= link_to  book_path(book) do %>
+                        <%= book.title %>
+                        <% end %>
+                   <% end %>
+                        </td>
+                        <td>
+                             <%= book.body %>
+                        </td>
+                    </tr>
+                <% end %>
      </tbody>
