--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,20 +12,19 @@
        </tr>
      </thead>
      <tbody>
-      <% @books.each do |book| %>
+      <% @users.each do |user| %>
          <tr>
             <td>
-
-              <% if @user.profile_image.attached? %>
-               <%= image_tag @user.profile_image, size: "80x80" %>
+              <% if user.profile_image.attached? %>
+               <%= image_tag user.profile_image, size: "80x80" %>
               <% else %>
                 <%= image_tag 'default-image', size: "80x80" %>
               <% end %>
             <td>
-               <%= @user.name %>
+               <%= user.name %>
              </td>
              <td>
-              <%= link_to "Show",user_path(book) %>
+              <%= link_to "Show",user_path(user) %>
              </td>
           </tr>
       <% end %>
