--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,1 +1,23 @@
-<h2>bookモデル　編集画面</h2>
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <%= form_with model: @book do |f| %>
+      <div class="form-group">
+        <lebel for="book_title">Title</lebel>
+        <%= f.text_field :title ,class: 'form-control'%>
+      </div>
+      <div class="form-group">
+        <label for="book_opinion">Opinion</label>
+        <%= f.text_area :body,class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <%= f.submit 'Update Book',class: 'btn btn-success' %>
+      </div>
+      <% end %>
+    </div>
+  		
+  </div>
+  </div>
+</div>
