--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -16,7 +16,12 @@
         <%= f.submit 'Update Book',class: 'btn btn-success' %>
       </div>
       <% end %>
+      <%= link_to "Show",book_path(@book) %>
+      |
+      <%= link_to "Back",books_path %>
     </div>
+    
+
   		
   </div>
   </div>
