--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,7 @@
         </td>
 
         <td>
-          <%= link_to  book_path(current_user) do %>
+          <%= link_to  book_path(@book) do %>
              <%= @book.title %>
           <% end %>
         </td>
