--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,8 +9,15 @@
       <%= f.text_field :name ,class: 'form-control'%>
       <div class="form-group">
        <label for="user_image">Image</label>
-       <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*",class: 'form-control-file' %>  
+       <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*",class: 'form-control-file' %>
       </div>
+       <div class="form-group">
+        <label for="book_opinion">Introduction</label>
+        <%= f.text_area :introduction,class: 'form-control' %>
+       </div>
+       <div class="form-group">
+        <%= f.submit 'Update User',class: 'btn btn-secondary' %>
+       </div>
      <% end %>
      </div>
    </div>
