--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,12 @@
 <%= render  'books/list', user: @user,book: @book_new %>
 
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>error prohibited this obj from being saved:</br>
+  <%= @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
 
 
         <div class="col-md-8 offset-md-1">
