--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,9 +4,9 @@
 
 
         <div class="col-md-8 offset-md-1">
-        <% if @book.errors.any? %>
-          <%= @book.errors.count %>error prohibited this obj from being saved:</br>
-          <% @book.errors.full_messages.each do |message| %>
+        <% if @book_new.errors.any? %>
+          <%= @book_new.errors.count %>error prohibited this obj from being saved:</br>
+          <% @book_new.errors.full_messages.each do |message| %>
             <%= message %>
           <% end %>
         <% end %>
