--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,7 +27,9 @@
           <%= @book.body %>
         </td>
        <td>
-         <%= link_to "Edit", edit_book_path(@book), class:"btn btn btn-sm btn-success"%>
+         <% if @book.user == current_user %>
+           <%= link_to "Edit", edit_book_path(@book), class:"btn btn btn-sm btn-success"%>
+         <% end %>
        </td>
         <td>
           <% if @book.user == current_user %>
