--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                 </li>
                 <li>
                   <%= link_to  destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
-                  <i class="fas fa-sign-out-alt"></i> Log aut
+                  <i class="fas fa-sign-out-alt"></i> Log out
                   <% end %>
                 </li>
               <% else %>
