--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,17 +24,15 @@
                 <% @books.each do |book| %>
                     <tr>
                         <td>
-                            <%= link_to  book_path(book) do %>
-                            <% if @user.profile_image.attached? %>
-                             <%= image_tag @user.profile_image, size: "80x80" %>
-                            <% else %>
-                             <%= image_tag 'default-image', size: "80x80" %>
+                            
+                            <%= link_to  user_path(book.user) do %>
+                             <%= image_tag book.user.get_profile_image(100,100) %>
                             <% end %>
                         <td>
                             <%= link_to  book_path(book) do %>
                              <%= book.title %>
                             <% end %>
-                            <% end %>
+                            
                         </td>
                         <td>
                              <%= book.body %>
