--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -23,7 +23,7 @@
                 </tbody>
             </table>
             <div class="row">
-                <%= link_to edit_user_path(current_user) ,class: 'btn btn-outline-secondary btn-block' do%>
+                <%= link_to edit_user_path(@user) ,class: 'btn btn-outline-secondary btn-block' do%>
                 <i class="fas fa-user-cog"></i>
                 <% end %>
             </div>
