--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,7 @@
         <% @books.each do |book| %>
              <tr>
                  <td>
-                    <%= link_to  book_path(book) do %>
+                    <%= link_to  user_path(@user) do %>
                         <% if @user.profile_image.attached? %>
                             <%= image_tag @user.profile_image, size: "80x80" %>
                         <% else %>
@@ -36,6 +36,5 @@
         <% end %>
      </tbody>
   </table>
-</div>
 </div>
 </div>
